# strava_mds

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: ci_pipeline.yml
core/utilities/: date_utils.py
core_library/: __init__.py
core_library/dagster/: dagster_asset_check_factory.py
core_library/handler/: strava_api.py
core_library/utilities/: custom_log.py  data_utils.py  date_utils.py  file_utils.py  polars_dataframe_utils.py  text_utils.py
docs/: conf.py  index.rst
mds_dagster/: __init__.py
mds_dagster/asset_checks/: README.md  asset_checks_schema.json
mds_dagster/asset_checks/ingest/: strava_asset_checks.yaml
mds_dagster/assets/: ingest_assets.py
mds_dagster/assets/ingest/: strava_asset.py
mds_dagster/assets/ingest/api/: strava_asset.py
mds_dagster/assets/staging_data/: strava_asset_staging.py
mds_dagster/jobs/assets/ingest/: strava_jobs.py
mds_dagster/resources/: duck_db_resource.py  polars_parquet_io_manager.py
mds_dagster/resources/ingest/: strava_resource.py
mds_dagster/resources/ingest/api/: strava_resource.py
mds_dagster/schedules/: __init__.py
strava_dagster/: README.md  __init__.py
strava_dagster/assets/: ingest_assets.py
tests/core_library/: test_repo.py
tests/core_library/handler/: test_strava_api.py
tests/core_library/utilities/: test_date_utils.py  test_text_utils.py
tests/mds_dagster/asset_checks/: test_asset_checks_yaml_files.py
